Fix Render deployment issues
🔧 Fixed deployment configuration:
- Added missing faker dependency to package.json
- Added @types/faker for TypeScript support
- Updated render.yaml with proper build commands
- Added Node.js version specification (18.18.0)
- Added .nvmrc file for Node version consistency
- Updated README with troubleshooting guide

✅ Build tested locally and working
🚀 Ready for Render deployment

--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "cmdk": "^0.2.0",
     "vaul": "^0.9.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "faker": "^5.5.3"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "@types/faker": "^5.5.9"
   }
 }
