--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,15 @@ services:
     name: churn-demo
     env: node
     plan: free
-    buildCommand: npm install && npm run build
+    buildCommand: npm ci && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
       - key: NEXT_PUBLIC_APP_URL
         value: https://churn-demo.onrender.com
+      - key: NODE_VERSION
+        value: 18.18.0
     healthCheckPath: /
     autoDeploy: true
+    region: oregon
